# talker

./: .env.example  .gitignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  presets.json  pyproject.toml  requirements.txt
electron-client/: main.js  package-lock.json  package.json  preload.js
electron-client/renderer/: index.html  index.js
voice_agent/: __init__.py  ai_agent.py  api_server.py  autocomplete.py  cache.py  clarification.py  command_queue.py  config.py  exceptions.py  file_context.py  file_control.py  fuzzy_matcher.py  hardcoded_commands.py  hotkey.py  intent_parser.py  main.py  pattern_matcher.py  predictive_cache.py  presets.py  stt.py  tab_control.py  text_input.py  window_control.py
voice_agent/cache/: __init__.py  cache.py  models.py  namespaces.py
voice_agent/commands/: __init__.py  activate_preset.py  base.py  close_app.py  close_tab.py  executor.py  focus_app.py  list_apps.py  list_projects.py  list_recent_files.py  list_tabs.py  open_url.py  place_app.py  query.py  switch_tab.py
voice_agent/monitoring/: __init__.py  activity_monitor.py  app_monitor.py  state_snapshotter.py  system_context.py  tab_monitor.py  window_monitor.py
voice_agent/stt/: __init__.py  audio.py  base.py  config.py  factory.py
voice_agent/stt/engines/: __init__.py  macos_engine.py  sphinx_engine.py  whisper_engine.py
voice_agent/utils/: __init__.py  applescript.py
voice_agent/web/: __init__.py  dialog.py
voice_agent/web/static/css/: dialog.css
voice_agent/web/static/js/: dialog.js
voice_agent/web/templates/: dialog.html
